--- a/apps/sso/package.json
+++ b/apps/sso/package.json
@@ -8,13 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-beta3",
+    "@chakra-ui/react": "latest",
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "classnames": "^2.3.1",
+    "framer-motion": "latest",
     "next": "10.2.3",
+    "postcss-nested": "^5.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-intl-tel-input": "^8.0.4",
+    "react-phone-input-2": "^2.14.0",
+    "sass": "^1.35.1"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.18",
     "@types/react": "17.0.11",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.4",
+    "tailwindcss": "^2.1.4",
     "typescript": "4.3.2"
   }
 }
