--- a/apps/sso/package.json
+++ b/apps/sso/package.json
@@ -11,9 +11,11 @@
     "@chakra-ui/react": "latest",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
+    "@icon-park/react": "^1.3.3",
     "classnames": "^2.3.1",
-    "framer-motion": "latest",
     "firebase": "^8.6.7",
+    "formik": "^2.2.9",
+    "framer-motion": "latest",
     "next": "10.2.3",
     "postcss-nested": "^5.0.5",
     "react": "17.0.2",
