--- a/apps/sso/package.json
+++ b/apps/sso/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@icon-park/react": "^1.3.3",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "firebase": "^8.6.7",
     "formik": "^2.2.9",
