--- a/apps/sso/package.json
+++ b/apps/sso/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "sso",
+  "name": "happin-sso",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3005",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "type-check": "tsc"
   },
   "dependencies": {
     "@chakra-ui/react": "latest",
