--- a/apps/sso/tsconfig.json
+++ b/apps/sso/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@styles/*": ["styles/*"]
+    },
     "jsx": "preserve"
   },
   "exclude": [
