--- a/apps/sso/tsconfig.json
+++ b/apps/sso/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "./",
+    // "baseUrl": "./",
     "paths": {
-      "@components/*": ["components/*"],
-      "@styles/*": ["styles/*"]
+      "@components/*": ["./components/*"],
+      "@styles/*": ["./styles/*"]
     },
     "jsx": "preserve"
   },
