--- a/apps/sso/tsconfig.json
+++ b/apps/sso/tsconfig.json
@@ -4,7 +4,8 @@
     // "baseUrl": "./",
     "paths": {
       "@components/*": ["./components/*"],
-      "@styles/*": ["./styles/*"]
+      "@styles/*": ["./styles/*"],
+      "@contexts/*": ["./contexts/*"]
     },
     "jsx": "preserve"
   },
