--- a/apps/sso/tsconfig.json
+++ b/apps/sso/tsconfig.json
@@ -5,7 +5,9 @@
     "paths": {
       "@components/*": ["./components/*"],
       "@styles/*": ["./styles/*"],
-      "@contexts/*": ["./contexts/*"]
+      "@contexts/*": ["./contexts/*"],
+      "@utils/*": ["./utils/*"],
+      "@api/*": ["./api/*"]
     },
     "jsx": "preserve"
   },
