--- a/apps/box-office/package.json
+++ b/apps/box-office/package.json
@@ -8,14 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@icon-park/react": "^1.3.3",
+    "apexcharts": "^3.27.2",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.0-beta3",
-    "next": "10.2.3",
+    "next": "11.0.1",
+    "postcss": "^8.3.5",
+    "postcss-nested": "^5.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-apexcharts": "^1.3.9",
+    "react-circular-progressbar": "^2.0.4",
+    "react-dom": "17.0.2",
+    "sass": "^1.35.1"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "autoprefixer": "^10.2.6",
+    "eslint": "7.29.0",
+    "eslint-config-next": "11.0.1",
+    "tailwindcss": "^2.2.4",
     "typescript": "4.3.2"
   }
 }
