--- a/apps/sso/package.json
+++ b/apps/sso/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-intl-tel-input": "^8.0.4",
     "react-phone-input-2": "^2.14.0",
+    "react-toastify": "^7.0.4",
     "sass": "^1.35.1"
   },
   "devDependencies": {
