--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -13,12 +13,16 @@
     "@chakra-ui/react": "latest",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
+    "@icon-park/react": "^1.3.3",
+    "@types/react-scroll": "^1.8.3",
+    "classnames": "^2.3.1",
     "framer-motion": "latest",
     "next": "11.0.1",
-    "postcss-nested": "^5.0.5",
     "postcss": "^8.3.5",
+    "postcss-nested": "^5.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-scroll": "^1.8.3",
     "sass": "^1.35.1"
   },
   "devDependencies": {
