--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "latest",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
+    "@headlessui/react": "^1.4.0",
     "@icon-park/react": "^1.3.3",
     "@types/react-scroll": "^1.8.3",
     "classnames": "^2.3.1",
