--- a/apps/box-office/package.json
+++ b/apps/box-office/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "box-office",
+  "name": "happin-box-office",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "next start"
+    "start": "yarn run dev"
   },
   "dependencies": {
     "@icon-park/react": "^1.3.3",
