--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.4.0",
     "@icon-park/react": "^1.3.3",
     "@types/react-scroll": "^1.8.3",
+    "@types/react-slick": "^0.23.5",
     "classnames": "^2.3.1",
     "framer-motion": "latest",
     "next": "11.0.1",
@@ -24,7 +25,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scroll": "^1.8.3",
-    "sass": "^1.35.1"
+    "react-slick": "^0.28.1",
+    "react-spring-lightbox": "^1.6.0",
+    "sass": "^1.35.1",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
