--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -17,18 +17,24 @@
     "@icon-park/react": "^1.3.5",
     "@types/react-scroll": "^1.8.3",
     "@types/react-slick": "^0.23.5",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "framer-motion": "latest",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "next": "11.0.1",
     "postcss": "^8.3.5",
     "postcss-nested": "^5.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-iframe-comm": "^1.2.2",
+    "react-popper": "^2.2.5",
     "react-scroll": "^1.8.3",
     "react-slick": "^0.28.1",
     "react-spring-lightbox": "^1.6.0",
     "sass": "^1.35.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "react-share": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
