--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -24,6 +24,7 @@
     "postcss-nested": "^5.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.13.0",
     "react-scroll": "^1.8.3",
     "react-slick": "^0.28.1",
     "react-spring-lightbox": "^1.6.0",
