--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.3.5",
     "postcss-nested": "^5.0.5",
     "react": "17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.13.0",
     "react-iframe-comm": "^1.2.2",
