--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "latest",
     "@headlessui/react": "^1.4.0",
     "@icon-park/react": "^1.3.5",
+    "@types/lodash": "^4.14.172",
     "@types/react-scroll": "^1.8.3",
     "@types/react-select": "^4.0.17",
     "@types/react-select-country-list": "^2.2.0",
@@ -22,6 +23,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "framer-motion": "latest",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "next": "11.0.1",
