--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -34,6 +34,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.13.0",
     "react-iframe-comm": "^1.2.2",
+    "react-paypal-button-v2": "^2.6.3",
     "react-popper": "^2.2.5",
     "react-scroll": "^1.8.3",
     "react-select": "^4.3.1",
