--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "latest",
     "@headlessui/react": "^1.4.0",
     "@icon-park/react": "^1.3.5",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.17.1",
     "@types/lodash": "^4.14.172",
     "@types/react-scroll": "^1.8.3",
     "@types/react-select": "^4.0.17",
