--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "latest",
     "@headlessui/react": "^1.4.0",
     "@icon-park/react": "^1.3.5",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "@types/react-scroll": "^1.8.3",
     "@types/react-slick": "^0.23.5",
     "axios": "^0.21.1",
@@ -31,11 +32,11 @@
     "react-iframe-comm": "^1.2.2",
     "react-popper": "^2.2.5",
     "react-scroll": "^1.8.3",
+    "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
     "react-spring-lightbox": "^1.6.0",
     "sass": "^1.35.1",
-    "styled-components": "^5.3.0",
-    "react-share": "^4.4.0"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
