--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "framer-motion": "latest",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
