--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -15,23 +15,34 @@
     "@emotion/styled": "latest",
     "@headlessui/react": "^1.4.0",
     "@icon-park/react": "^1.3.5",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.17.1",
+    "@types/lodash": "^4.14.172",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@types/react-scroll": "^1.8.3",
+    "@types/react-select": "^4.0.17",
+    "@types/react-select-country-list": "^2.2.0",
     "@types/react-slick": "^0.23.5",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "framer-motion": "latest",
+    "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "next": "11.0.1",
     "postcss": "^8.3.5",
     "postcss-nested": "^5.0.5",
     "react": "17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.13.0",
     "react-iframe-comm": "^1.2.2",
+    "react-paypal-button-v2": "^2.6.3",
     "react-popper": "^2.2.5",
     "react-scroll": "^1.8.3",
+    "react-select": "^4.3.1",
+    "react-select-country-list": "^2.2.3",
     "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
     "react-spring-lightbox": "^1.6.0",
