--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -17,8 +17,8 @@
     "@icon-park/react": "^1.3.5",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
-    "@types/lodash": "^4.14.172",
     "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@types/lodash": "^4.14.172",
     "@types/react-scroll": "^1.8.3",
     "@types/react-select": "^4.0.17",
     "@types/react-select-country-list": "^2.2.0",
@@ -46,6 +46,7 @@
     "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
     "react-spring-lightbox": "^1.6.0",
+    "react-tiny-popover": "^7.0.0",
     "sass": "^1.35.1",
     "styled-components": "^5.3.0"
   },
