--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -47,6 +47,7 @@
     "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
     "react-spring-lightbox": "^1.6.0",
+    "react-use-intercom": "^1.4.0",
     "sass": "^1.35.1",
     "styled-components": "^5.3.0"
   },
