--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -41,6 +41,7 @@
     "react-paypal-button-v2": "^2.6.3",
     "react-plx": "^1.3.17",
     "react-popper": "^2.2.5",
+    "react-qr-code": "^2.0.2",
     "react-scroll": "^1.8.3",
     "react-select": "^4.3.1",
     "react-select-country-list": "^2.2.3",
