--- a/apps/box-office/package.json
+++ b/apps/box-office/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@icon-park/react": "^1.3.5",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
+    "@types/react-paginate": "^7.1.1",
     "apexcharts": "^3.27.2",
     "axios": "^0.21.1",
     "next": "11.0.1",
@@ -18,6 +20,9 @@
     "react-apexcharts": "^1.3.9",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
+    "react-iframe-comm": "^1.2.2",
+    "react-paginate": "^7.1.3",
+    "react-use-intercom": "^1.4.0",
     "sass": "^1.35.1"
   },
   "devDependencies": {
