--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -33,9 +33,12 @@
     "next": "11.0.1",
     "postcss": "^8.3.5",
     "postcss-nested": "^5.0.5",
+    "rc-upload": "^4.3.1",
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "17.0.2",
+    "react-google-autocomplete": "^2.4.3",
     "react-hook-form": "^7.13.0",
     "react-iframe-comm": "^1.2.2",
     "react-paypal-button-v2": "^2.6.3",
@@ -53,6 +56,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "@types/react-datepicker": "^4.1.7",
     "autoprefixer": "^10.2.6",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
