--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -25,6 +25,11 @@
     "@types/react-slick": "^0.23.5",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "filepond": "^4.30.3",
+    "filepond-plugin-file-validate-type": "^1.2.6",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.10",
+    "filepond-plugin-image-resize": "^2.0.10",
     "framer-motion": "latest",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -38,6 +43,7 @@
     "react-countdown": "^2.3.2",
     "react-datepicker": "^4.2.1",
     "react-dom": "17.0.2",
+    "react-filepond": "^7.1.1",
     "react-google-autocomplete": "^2.4.3",
     "react-hook-form": "^7.13.0",
     "react-iframe-comm": "^1.2.2",
