--- a/apps/box-office/package.json
+++ b/apps/box-office/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-circular-progressbar": "^2.0.4",
+    "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-iframe-comm": "^1.2.2",
     "react-paginate": "^7.1.3",
