--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -18,6 +18,7 @@
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@types/emoji-mart": "^3.0.8",
     "@types/lodash": "^4.14.172",
     "@types/react-scroll": "^1.8.3",
     "@types/react-select": "^4.0.17",
@@ -25,6 +26,7 @@
     "@types/react-slick": "^0.23.5",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "emoji-mart": "^3.0.1",
     "framer-motion": "latest",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
