--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -54,6 +54,7 @@
     "react-select-country-list": "^2.2.3",
     "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
+    "react-spring-bottom-sheet": "^3.4.0",
     "react-spring-lightbox": "^1.6.0",
     "sass": "^1.35.1",
     "styled-components": "^5.3.0",
