--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -33,7 +33,6 @@
     "next": "11.0.1",
     "postcss": "^8.3.5",
     "postcss-nested": "^5.0.5",
-    "randomcolor": "^0.6.2",
     "rc-upload": "^4.3.1",
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
@@ -43,7 +42,6 @@
     "react-hook-form": "^7.13.0",
     "react-iframe-comm": "^1.2.2",
     "react-paypal-button-v2": "^2.6.3",
-    "react-player": "^2.9.0",
     "react-plx": "^1.3.17",
     "react-popper": "^2.2.5",
     "react-qr-code": "^2.0.2",
@@ -54,8 +52,7 @@
     "react-slick": "^0.28.1",
     "react-spring-lightbox": "^1.6.0",
     "sass": "^1.35.1",
-    "styled-components": "^5.3.0",
-    "tim-js-sdk": "^2.15.0"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
