--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -18,6 +18,7 @@
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tinymce/tinymce-react": "^3.13.1",
     "@types/emoji-mart": "^3.0.8",
     "@types/lodash": "^4.14.172",
     "@types/react-scroll": "^1.8.3",
