--- a/apps/box-office/package.json
+++ b/apps/box-office/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@icon-park/react": "^1.3.5",
-    "@tailwindcss/aspect-ratio": "^0.3.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@types/react-paginate": "^7.1.1",
     "apexcharts": "^3.27.2",
     "axios": "^0.21.1",
@@ -27,10 +27,12 @@
   },
   "devDependencies": {
     "@types/react": "17.0.11",
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "^10.4.2",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
-    "tailwindcss": "^2.2.4",
-    "typescript": "4.3.2"
+    "postcss": "^8.4.6",
+    "postcss-nested": "^5.0.6",
+    "tailwindcss": "^3.0.23",
+    "typescript": "4.3.5"
   }
 }
