--- a/apps/happin-web/.eslintrc
+++ b/apps/happin-web/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["next", "next/core-web-vitals"],
+  "extends": ["next", "next/core-web-vitals", "prettier"],
   "rules": {
     "@next/next/no-img-element": "off"
   }
