--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -9,47 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.13",
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "latest",
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
-    "@headlessui/react": "^1.4.0",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11",
+    "@headlessui/react": "^1.5.0",
     "@icon-park/react": "^1.3.5",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
-    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tinymce/tinymce-react": "^3.13.1",
-    "@types/emoji-mart": "^3.0.8",
-    "@types/lodash": "^4.14.172",
-    "@types/react-scroll": "^1.8.3",
-    "@types/react-select": "^4.0.17",
-    "@types/react-select-country-list": "^2.2.0",
-    "@types/react-slick": "^0.23.5",
+    "ahooks": "^3.3.0",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "emoji-mart": "^3.0.1",
-    "framer-motion": "latest",
+    "framer-motion": "^6",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "next": "11.0.1",
     "randomcolor": "^0.6.2",
-    "rc-upload": "^4.3.1",
+    "rc-upload": "^4.3.3",
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
     "react-datepicker": "^4.2.1",
     "react-dom": "17.0.2",
     "react-google-autocomplete": "^2.4.3",
-    "react-hook-form": "^7.13.0",
+    "react-google-places-autocomplete": "^3.3.4",
+    "react-hook-form": "^7.29.0",
     "react-iframe-comm": "^1.2.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-player": "^2.9.0",
     "react-plx": "^1.3.17",
     "react-popper": "^2.2.5",
-    "react-qr-code": "^2.0.2",
-    "react-scroll": "^1.8.3",
-    "react-select": "^4.3.1",
+    "react-qr-code": "^2.0.5",
+    "react-scroll": "^1.8.6",
+    "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
     "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
@@ -60,11 +57,17 @@
     "tim-js-sdk": "^2.15.0"
   },
   "devDependencies": {
+    "@types/emoji-mart": "^3.0.8",
+    "@types/lodash": "^4.14.172",
     "@types/react": "17.0.11",
     "@types/react-datepicker": "^4.1.7",
+    "@types/react-scroll": "^1.8.3",
+    "@types/react-select-country-list": "^2.2.0",
+    "@types/react-slick": "^0.23.5",
     "autoprefixer": "^10.4.2",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.6",
     "postcss-nested": "^5.0.6",
     "tailwindcss": "^3.0.23",
