--- a/apps/sso/package.json
+++ b/apps/sso/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@chakra-ui/react": "latest",
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11",
     "@icon-park/react": "^1.3.5",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
