--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -61,6 +61,7 @@
     "@types/lodash": "^4.14.172",
     "@types/react": "17.0.11",
     "@types/react-datepicker": "^4.1.7",
+    "@types/react-dom": "17.0.2",
     "@types/react-scroll": "^1.8.3",
     "@types/react-select-country-list": "^2.2.0",
     "@types/react-slick": "^0.23.5",
