--- a/apps/sso/package.json
+++ b/apps/sso/package.json
@@ -17,9 +17,8 @@
     "classnames": "^2.3.1",
     "firebase": "^8.6.7",
     "formik": "^2.2.9",
-    "framer-motion": "latest",
+    "framer-motion": "^6",
     "next": "10.2.3",
-    "postcss-nested": "^5.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intl-tel-input": "^8.0.4",
@@ -28,10 +27,10 @@
     "sass": "^1.35.1"
   },
   "devDependencies": {
-    "@tailwindcss/jit": "^0.1.18",
     "@types/react": "17.0.11",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.4",
+    "postcss-nested": "^5.0.6",
     "tailwindcss": "^2.1.4",
     "typescript": "^4.2.4"
   }
