--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -37,7 +37,7 @@
     "react-dom": "17.0.2",
     "react-google-autocomplete": "^2.4.3",
     "react-google-places-autocomplete": "^3.3.4",
-    "react-hook-form": "^7.29.0",
+    "react-hook-form": "~7.13.0",
     "react-iframe-comm": "^1.2.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
