--- a/apps/sso/package.json
+++ b/apps/sso/package.json
@@ -28,10 +28,10 @@
   },
   "devDependencies": {
     "@types/react": "17.0.11",
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.4",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
     "postcss-nested": "^5.0.6",
-    "tailwindcss": "^2.1.4",
-    "typescript": "^4.2.4"
+    "tailwindcss": "^3.0.23",
+    "typescript": "4.3.5"
   }
 }
