--- a/apps/box-office/package.json
+++ b/apps/box-office/package.json
@@ -8,6 +8,10 @@
     "start": "yarn run dev"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "latest",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11",
     "@icon-park/react": "^1.3.5",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "apexcharts": "^3.27.2",
