--- a/apps/box-office/package.json
+++ b/apps/box-office/package.json
@@ -12,10 +12,12 @@
     "@chakra-ui/react": "latest",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11",
+    "@headlessui/react": "^1.5.0",
     "@icon-park/react": "^1.3.5",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "apexcharts": "^3.27.2",
     "axios": "^0.21.1",
+    "jwt-decode": "^3.1.2",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
