--- a/apps/box-office/package.json
+++ b/apps/box-office/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "apexcharts": "^3.27.2",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "jwt-decode": "^3.1.2",
     "next": "11.0.1",
     "react": "17.0.2",
