--- a/apps/box-office/package.json
+++ b/apps/box-office/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
