--- a/apps/box-office/package.json
+++ b/apps/box-office/package.json
@@ -18,6 +18,7 @@
     "apexcharts": "^3.27.2",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "framer-motion": "^6",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "next": "11.0.1",
