--- a/apps/happin-web/netlify.toml
+++ b/apps/happin-web/netlify.toml
@@ -1,9 +1,12 @@
 [build]
-  command = "yarn build"
-  publish = "out"
+  command = "yarn next build"
+  publish = ".next"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+[functions]
+  included_files = ["public/**"]
 
 [context.deploy-preview.environment]
   NODE_VERSION="12.22.0"
