--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -56,6 +56,7 @@
     "tim-js-sdk": "^2.15.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.28.4",
     "@types/emoji-mart": "^3.0.8",
     "@types/lodash": "^4.14.172",
     "@types/react": "17.0.11",
