--- a/apps/happin-web/netlify.toml
+++ b/apps/happin-web/netlify.toml
@@ -1,12 +1,9 @@
 [build]
   command = "yarn build"
-  publish = ".next"
+  publish = "out"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
-
-[functions]
-  included_files = ["public/**"]
 
 [context.deploy-preview.environment]
   NODE_VERSION="12.22.0"
