--- a/apps/happin-web/package.json
+++ b/apps/happin-web/package.json
@@ -57,7 +57,7 @@
     "video.js": "^7.20.3"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.28.4",
+    "@netlify/plugin-nextjs": "^4.29.2",
     "@types/emoji-mart": "^3.0.8",
     "@types/lodash": "^4.14.172",
     "@types/react": "17.0.11",
@@ -67,13 +67,13 @@
     "@types/react-select-country-list": "^2.2.0",
     "@types/react-slick": "^0.23.5",
     "@types/video.js": "^7.3.49",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "10.4.5",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.5.0",
-    "postcss": "^8.4.6",
-    "postcss-nested": "^5.0.6",
-    "tailwindcss": "^3.0.23",
+    "postcss": "^8.4.19",
+    "postcss-nested": "^6.0.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.3.5"
   }
 }
