--- a/apps/sso/package.json
+++ b/apps/sso/package.json
@@ -17,7 +17,7 @@
     "firebase": "^8.6.7",
     "formik": "^2.2.9",
     "framer-motion": "^6",
-    "next": "10.2.3",
+    "next": "12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intl-tel-input": "^8.0.4",
@@ -26,11 +26,12 @@
     "sass": "^1.35.1"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.29.2",
     "@types/react": "17.0.11",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.6",
+    "autoprefixer": "10.4.5",
+    "postcss": "^8.4.19",
     "postcss-nested": "^5.0.6",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.3.5"
   }
 }
